# rotation-equivariant-contour-learning

./: .gitignore  README.md  ablation_study.py  autoencoder.py  config.py  curvature_regression.py  dataset.py  generate_equivariance_visualization.py  pyproject.toml  train_classifier.py  transforms.py  utils.py
baseline/: models.py
checkpoints/: best_autoencoder_contour.pth  best_autoencoder_contour.pth.old  best_autoencoder_contour.pth.old.new  best_autoencoder_image.pth  best_autoencoder_image.pth.old
datasets/: .gitignore  README.md  curvature.py  fashion_mnist.py  modelnet.py  pcst_cells.py  pcst_extract.sh  rotated_mnist.py  utils.py  viz.py
rotatouille/: __init__.py  layers.py  models.py  utils.py
