[project]
name = "Rotatouille"
version = "0.0.1"
description = "Rotation equivariant and invariant layers for planar contour data."
requires-python = ">=3.9"
dependencies = [
    "torch==2.0.1",
    "tqdm",
    "numpy<2",
    "scipy",
    "opencv-python",
    "matplotlib",
    "pyarrow",
    "pandas",
    "trimesh",
    "scikit-image",
    "pyqt6>=6.9.1",
    "scikit-learn>=1.6.1",
]

